--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,12 @@
 {
-  "installCommand": "npm install --include=dev",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "devCommand": "npm run dev"
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node",
+      "config": {
+        "installCommand": "npm ci --legacy-peer-deps"
+      }
+    }
+  ]
 }
