--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
         "globals": "^15.15.0",
         "postcss": "^8.5.3",
         "prettier": "^3.6.2",
-        "tailwindcss": "^3.4.17",
-    }
+        "tailwindcss": "^3.4.17"
+    },
+    "packageManager": "npm@10.0.0"
 }
