--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,11 @@
 {
-    "version": 2,
-    "installCommand": "npm install --include=dev",
-    "buildCommand": "npm run build"
+    "installCommand": "npm install",
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "devCommand": "npm run dev",
+    "functions": {
+        "**/*.js": {
+            "runtime": "nodejs20.x"
+        }
+    }
 }
