--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,10 @@
         "node": "20.x"
     },
     "scripts": {
-        "dev": "npx vite",
-        "build": "npx vite build",
+        "dev": "vite",
+        "build": "vite build",
         "lint": "eslint .",
-        "preview": "npx vite preview"
+        "preview": "vite preview"
     },
     "dependencies": {
         "@editorjs/checklist": "^1.6.0",
@@ -42,14 +42,14 @@
         "shadcn": "^2.4.0-canary.17",
         "tailwind-merge": "^3.0.2",
         "textarea": "^0.3.0",
-        "tw-animate-css": "^1.2.4",
-        "@vitejs/plugin-react": "^4.3.4",
-        "vite": "^5.4.11"
+        "tw-animate-css": "^1.2.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@tailwindcss/vite": "^4.0.14",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
+        "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.21",
         "eslint": "^9.21.0",
         "eslint-plugin-react-hooks": "^5.1.0",
@@ -57,7 +57,8 @@
         "globals": "^15.15.0",
         "postcss": "^8.5.3",
         "prettier": "^3.6.2",
-        "tailwindcss": "^3.4.17"
+        "tailwindcss": "^4.0.14",
+        "vite": "^5.4.11"
     },
     "packageManager": "npm@10.0.0"
 }
